# on pc
# PROJECT(main)
# CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
# AUX_SOURCE_DIRECTORY(. DIR_SRCS)
# ADD_EXECUTABLE(test ${DIR_SRCS})

# on rpi
PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
# 查找源代码文件
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
# 创建可执行文件
ADD_EXECUTABLE(test ${DIR_SRCS})
# 链接 i2c 库
TARGET_LINK_LIBRARIES(test i2c)
